--- a/vimwiki/stylesheets/extra.css
+++ b/vimwiki/stylesheets/extra.css
@@ -3,6 +3,7 @@
   font-family: 'Roboto';
   font-style: normal;
   font-weight: 100;
+  font-display: swap;
   src: url('../fonts/roboto-v20-latin-100.eot'); /* IE9 Compat Modes */
   src: local('Roboto Thin'), local('Roboto-Thin'),
        url('../fonts/roboto-v20-latin-100.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
@@ -17,6 +18,7 @@
   font-family: 'Roboto';
   font-style: italic;
   font-weight: 100;
+  font-display: swap;
   src: url('../fonts/roboto-v20-latin-100italic.eot'); /* IE9 Compat Modes */
   src: local('Roboto Thin Italic'), local('Roboto-ThinItalic'),
        url('../fonts/roboto-v20-latin-100italic.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
@@ -31,6 +33,7 @@
   font-family: 'Roboto';
   font-style: normal;
   font-weight: 300;
+  font-display: swap;
   src: url('../fonts/roboto-v20-latin-300.eot'); /* IE9 Compat Modes */
   src: local('Roboto Light'), local('Roboto-Light'),
        url('../fonts/roboto-v20-latin-300.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
@@ -45,6 +48,7 @@
   font-family: 'Roboto';
   font-style: italic;
   font-weight: 300;
+  font-display: swap;
   src: url('../fonts/roboto-v20-latin-300italic.eot'); /* IE9 Compat Modes */
   src: local('Roboto Light Italic'), local('Roboto-LightItalic'),
        url('../fonts/roboto-v20-latin-300italic.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
@@ -59,6 +63,7 @@
   font-family: 'Roboto';
   font-style: normal;
   font-weight: 400;
+  font-display: swap;
   src: url('../fonts/roboto-v20-latin-regular.eot'); /* IE9 Compat Modes */
   src: local('Roboto'), local('Roboto-Regular'),
        url('../fonts/roboto-v20-latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
@@ -73,6 +78,7 @@
   font-family: 'Roboto';
   font-style: italic;
   font-weight: 400;
+  font-display: swap;
   src: url('../fonts/roboto-v20-latin-italic.eot'); /* IE9 Compat Modes */
   src: local('Roboto Italic'), local('Roboto-Italic'),
        url('../fonts/roboto-v20-latin-italic.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
@@ -87,6 +93,7 @@
   font-family: 'Roboto';
   font-style: normal;
   font-weight: 500;
+  font-display: swap;
   src: url('../fonts/roboto-v20-latin-500.eot'); /* IE9 Compat Modes */
   src: local('Roboto Medium'), local('Roboto-Medium'),
        url('../fonts/roboto-v20-latin-500.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
@@ -101,6 +108,7 @@
   font-family: 'Roboto';
   font-style: italic;
   font-weight: 500;
+  font-display: swap;
   src: url('../fonts/roboto-v20-latin-500italic.eot'); /* IE9 Compat Modes */
   src: local('Roboto Medium Italic'), local('Roboto-MediumItalic'),
        url('../fonts/roboto-v20-latin-500italic.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
@@ -115,6 +123,7 @@
   font-family: 'Roboto';
   font-style: normal;
   font-weight: 700;
+  font-display: swap;
   src: url('../fonts/roboto-v20-latin-700.eot'); /* IE9 Compat Modes */
   src: local('Roboto Bold'), local('Roboto-Bold'),
        url('../fonts/roboto-v20-latin-700.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
@@ -129,6 +138,7 @@
   font-family: 'Roboto';
   font-style: italic;
   font-weight: 700;
+  font-display: swap;
   src: url('../fonts/roboto-v20-latin-700italic.eot'); /* IE9 Compat Modes */
   src: local('Roboto Bold Italic'), local('Roboto-BoldItalic'),
        url('../fonts/roboto-v20-latin-700italic.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
@@ -143,6 +153,7 @@
   font-family: 'Roboto';
   font-style: normal;
   font-weight: 900;
+  font-display: swap;
   src: url('../fonts/roboto-v20-latin-900.eot'); /* IE9 Compat Modes */
   src: local('Roboto Black'), local('Roboto-Black'),
        url('../fonts/roboto-v20-latin-900.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
@@ -157,6 +168,7 @@
   font-family: 'Roboto';
   font-style: italic;
   font-weight: 900;
+  font-display: swap;
   src: url('../fonts/roboto-v20-latin-900italic.eot'); /* IE9 Compat Modes */
   src: local('Roboto Black Italic'), local('Roboto-BlackItalic'),
        url('../fonts/roboto-v20-latin-900italic.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
@@ -168,38 +180,42 @@
 
 @font-face {
   font-family: 'Hack';
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
   src: local('Hack'), local('Hack-Regular'),
        url('../fonts/hack-regular.woff2') format('woff2'),
        url('../fonts/hack-regular.woff') format('woff');
-  font-weight: 400;
-  font-style: normal;
 }
 
 @font-face {
   font-family: 'Hack';
+  font-weight: 700;
+  font-style: normal;
+  font-display: swap;
   src: local('Hack-Bold'),
        url('../fonts/hack-bold.woff2') format('woff2'),
        url('../fonts/hack-bold.woff') format('woff');
-  font-weight: 700;
-  font-style: normal;
 }
 
 @font-face {
   font-family: 'Hack';
+  font-weight: 400;
+  font-style: italic;
+  font-display: swap;
   src: local('Hack-Italic'),
        url('../fonts/hack-italic.woff2') format('woff2'),
        url('../fonts/hack-italic.woff') format('woff');
-  font-weight: 400;
-  font-style: italic;
 }
 
 @font-face {
   font-family: 'Hack';
+  font-weight: 700;
+  font-style: italic;
+  font-display: swap;
   src: local('Hack-BoldItalic'),
        url('../fonts/hack-bolditalic.woff2') format('woff2'),
        url('../fonts/hack-bolditalic.woff') format('woff');
-  font-weight: 700;
-  font-style: italic;
 }
 
 
