Add color theme and new favicon for modern browsers

--- a/vimwiki/stylesheets/extra.css
+++ b/vimwiki/stylesheets/extra.css
@@ -256,3 +256,11 @@ body, input {
 pre, code, kbd {
   font-family: "Hack", SFMono-Regular, Consolas, Menlo, monospace;
 }
+
+.md-footer-social {
+  &__link {
+    svg {
+      max-height: 48px;
+    }
+  }
+ }
