Fine-tune footer contrast

--- a/vimwiki/stylesheets/extra.css
+++ b/vimwiki/stylesheets/extra.css
@@ -229,8 +229,8 @@
 
     --md-accent-fg-color: #D42F5F;
 
-    --md-footer-fg-color--light: #FFFFFF;
-    --md-footer-fg-color--lighter: #A6A6A6;
+    --md-footer-fg-color--light: #A3A3A3;
+    --md-footer-fg-color--lighter: #808080;
 }
 
 img {
