--- a/vimwiki/stylesheets/extra.css
+++ b/vimwiki/stylesheets/extra.css
@@ -218,20 +218,38 @@
        url('../fonts/hack-bolditalic.woff') format('woff');
 }
 
+@media (prefers-color-scheme: dark) {
+    [data-md-color-scheme="digital-garden"] {
+        --md-primary-fg-color:        #108761;
+        --md-primary-fg-color--light: #12946B;
+        --md-primary-fg-color--dark:  #0D6E4F;
 
-[data-md-color-scheme="digital-garden"] {
-    --md-primary-fg-color:        #108761;
-    --md-primary-fg-color--light: #12946B;
-    --md-primary-fg-color--dark:  #0D6E4F;
+        --md-primary-bg-color:        #000000;
+        --md-primary-bg-color--light: #000000;
 
-    --md-primary-bg-color:        #FFFFFF;
-    --md-primary-bg-color--light: #FFFFFF;
+        --md-accent-fg-color: #D42F5F;
 
-    --md-accent-fg-color: #D42F5F;
-
-    --md-footer-fg-color--light: #A3A3A3;
-    --md-footer-fg-color--lighter: #808080;
+        --md-footer-fg-color--light: #A3A3A3;
+        --md-footer-fg-color--lighter: #808080;
+    }
 }
+
+@media (prefers-color-scheme: light){
+    [data-md-color-scheme="digital-garden"] {
+        --md-primary-fg-color:        #108761;
+        --md-primary-fg-color--light: #12946B;
+        --md-primary-fg-color--dark:  #0D6E4F;
+
+        --md-primary-bg-color:        #FFFFFF;
+        --md-primary-bg-color--light: #FFFFFF;
+
+        --md-accent-fg-color: #D42F5F;
+
+        --md-footer-fg-color--light: #A3A3A3;
+        --md-footer-fg-color--lighter: #808080;
+    }
+}
+
 
 img {
     box-shadow: 0 1px 2px rgba(0,0,0,0.07), 
@@ -259,11 +277,3 @@ body, input {
 pre, code, kbd {
   font-family: "Hack", SFMono-Regular, Consolas, Menlo, monospace;
 }
-
-.md-footer-social {
-  &__link {
-    svg {
-      max-height: 48px;
-    }
-  }
- }
