Remove prefers colorscheme light info from CSS

--- a/docs/assets/stylesheets/extra.css
+++ b/docs/assets/stylesheets/extra.css
@@ -255,7 +255,8 @@
 /*     } */
 /* } */
 
-@media (prefers-color-scheme: light){
+/* @media (prefers-color-scheme: light){ */
+@media {
     [data-md-color-scheme="digital-garden"] {
         --md-primary-fg-color:        #108761;
         --md-primary-fg-color--light: #12946B;
